<resources>
    <string name="app_name">KotlinWeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="planets_array">
        <item>Wind</item>
        <item>Rain</item>
        <item>Snow</item>
        <item>Cloud</item>
        <item>Thunder Storm</item>
        <item>Mist/Fog</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hummidity">Humidity</string>
    <string name="hummidityy">Hummidity</string>
    <string name="Pressure">Pressure</string>
    <string name="Wind">Wind</string>
    <string name="Cloud">Cloud</string>
    <string name="UltraViolet">Ultra Violet</string>
    <string name="Visability">Visability</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="MileHour">Mile/Hour</string>
    <string name="MeterSecond">Meter/Second</string>
    <string name="Map">Map</string>
    <string name="GPS">GPS</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Apply">Apply</string>
    <string name="Language">Language</string>
    <string name="Location">Location</string>
    <string name="Temperature">Temperature</string>
    <string name="Save">Save</string>
    <string name="home">\@drawable/home</string>
    <string name="fav">\@drawable/favorite</string>
    <string name="alarm">\@drawable/alarm</string>
    <string name="settings">\@drawable/settings</string>
    <string name="about">The Alarm is About :</string>
    <string name="altitle">Title</string>
    <string name="titletitle">Title</string>
    <string name="sdate">Start Date</string>
    <string name="edate">End Date</string>
    <string name="atime">Alarm Time</string>
    <string name="dialog">Dialog</string>
    <string name="add">Add</string>
</resources>