<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".homeScreen.view.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="8.1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="249dp"
                        android:layout_height="187dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="48dp"
                        android:src="@drawable/cloudygirl"
                        app:layout_constraintStart_toEndOf="@+id/homeTempratureId"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/homePlaceId"
                        android:layout_width="163dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="39dp"
                        android:layout_marginTop="28dp"
                        android:fontFamily="casual"
                        android:text="Nasr city , Egypt"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/homeTempratureId"
                        android:layout_width="101dp"
                        android:layout_height="63dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="casual"
                        android:shadowColor="#0B0A0A"
                        android:text="20C"
                        android:textAlignment="textStart"
                        android:textColor="#100F0F"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/homePlaceId"
                        app:layout_constraintTop_toBottomOf="@+id/homePlaceId" />

                    <TextView
                        android:id="@+id/homeDescId"
                        android:layout_width="wrap_content"
                        android:layout_height="37dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="casual"
                        android:text="Sunny"
                        android:textColor="#03dac5 "
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/descImgId"
                        app:layout_constraintTop_toBottomOf="@+id/homeTempratureId" />

                    <ImageView
                        android:id="@+id/descImgId"
                        android:layout_width="40dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="16dp"
                        android:padding="0dp"
                        android:src="@drawable/cloudy"
                        app:layout_constraintStart_toStartOf="@+id/homeTempratureId"
                        app:layout_constraintTop_toBottomOf="@+id/homeTempratureId" />

                    <TextView
                        android:id="@+id/homeDateId"
                        android:layout_width="102dp"
                        android:layout_height="18dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="casual"
                        android:text="1/5/2022"
                        app:layout_constraintStart_toStartOf="@+id/descImgId"
                        app:layout_constraintTop_toBottomOf="@+id/homeDescId" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.005"
                android:background="#AB6A6A6A" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="#FFFFFF" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:rotationY="2"
                app:columnCount="3">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:width="130dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/hummidityy"
                    android:textColor="#72393939"
                    app:layout_column="0"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:width="130dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="Pressure"
                    android:textColor="#72393939"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:width="150dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/Wind"
                    android:textColor="#72393939"
                    app:layout_column="2"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/homeHummidityId"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="130dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="16%"
                    android:textColor="#03DAC5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/homePressureId"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="130dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="27%"
                    android:textColor="#03DAC5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_column="1"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/homeWindId"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="150dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="2.3Mile/hr"
                    android:textColor="#03DAC5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/Cloud"
                    android:textColor="#72393939"
                    app:layout_column="0"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/UltraViolet"
                    android:textColor="#72393939"
                    app:layout_column="1"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/Visability"
                    android:textColor="#72393939"
                    app:layout_column="2"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/homeCloudId"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="52%"
                    android:textColor="#03DAC5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/homeultraVioletId"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="10%"
                    android:textColor="#03DAC5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_column="1"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/homeVisabitiyId"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="34%"
                    android:textColor="#03DAC5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_row="3" />
            </androidx.gridlayout.widget.GridLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHourlyId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

            </androidx.recyclerview.widget.RecyclerView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDailyId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingBottom="20dp" />
        </LinearLayout>

    </FrameLayout>

</ScrollView>
